# claude-web-tools

./: README.md  pyproject.toml  server.py
.claude/: TECH_DEBT.md
parkour_mcp/: __init__.py  _pipeline.py  common.py  fetch_direct.py  fetch_js.py  markdown.py  mediawiki.py  youtube.py
scripts/: generate_icons.py
tests/: test_fetch_direct.py  test_icons.py  test_main.py  test_slicing.py  test_tips.py  test_youtube.py
