[project]
name = "claude-web-tools"
version = "0.2.0"
description = "MCP server providing web browsing and content extraction tools for Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "kagiapi",
    "beautifulsoup4",
    "httpx",
    "playwright",
    "markdownify",
]

[project.scripts]
claude-web-tools = "server:main"

[tool.uv]
package = true
